--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,6 +5,11 @@
   <%= f.text_field :title %>
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <input name="song[note_contents][]">
+  <input name="song[note_contents][]">
+  <input name="song[note_contents][]">
+  <input type="submit" value="Submit">
   <br />
 
   <%= f.submit %>
